# qr-scan-track

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: deploy.yml
analysis/: api.py  config.py  gen_codes.py  gen_pdfs.py  graph.py  heatmap.py  hits_over_time.py
src/: main.rs  track.rs  user_agents.yaml
