[package]
name = "qr-scan-track"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.1.1", features = ["alloc", "use-std"] }
random-string = "1.1.0"
rocket = { version = "0.5.1", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"

[dependencies.user-agent-parser]
version = "*"
features = ["rocket"]
